--- a/css/index.css
+++ b/css/index.css
@@ -12,3 +12,94 @@ p{
     color:white;
     text-align:center;
 }
+#container{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.histoire{
+    width: 350px;
+    height: 350px;
+    margin: 25px;
+    margin-bottom: 40px;
+    background-color: rgb(255, 255, 255);
+}
+.caseName{
+    background-color: rgb(209, 198, 198);
+    width: 100%;
+    height: 70px;
+
+    font-size: 18px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.caseDesc{
+    background-color: rgb(209, 198, 198);
+    width: 100%;
+    height: 230px;
+
+    text-align: center;
+    overflow-y: scroll;
+}
+.caseDesc > p{
+    font-size: 20px;
+    color: black;
+}
+.caseButton{
+    background-color: rgb(201, 195, 195);
+    width: 100%;
+    height: 50px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.button1{
+    background-color: rgb(26, 70, 165);
+    width: 50%;
+    height: 30px;
+    border-radius: 5px;
+
+    color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.button2{
+    background-color: rgb(252, 151, 0);
+    width: 30%;
+    height: 30px;
+    border-radius: 5px;
+
+    color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+a{
+    color: white;
+    text-decoration: none;
+}
+.auteur{
+    width: 100%;
+    height: 40px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-bottom: 20px;
+
+    color: rgb(148, 138, 138);
+
+    background-color: rgb(209, 198, 198);
+}
