--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
     width: 350px;
     height: 350px;
     margin: 25px;
+    margin-bottom: 40px;
     background-color: rgb(255, 255, 255);
 }
 .caseName{
@@ -73,4 +74,18 @@
 a{
     color: white;
     text-decoration: none;
+}
+.auteur{
+    width: 100%;
+    height: 40px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-bottom: 20px;
+
+    color: rgb(148, 138, 138);
+
+    background-color: rgb(209, 198, 198);
 }
