--- a/css/ChapterReadUser.css
+++ b/css/ChapterReadUser.css
@@ -38,6 +38,9 @@ h3{
     width: 100%;
     height: 600px;
 
+    pointer-events: none;
+    cursor: not-allowed;
+
     background-color: rgb(209, 198, 198);
 
     display: flex;
@@ -67,4 +70,8 @@ h3{
 a{
     text-decoration: none;
     color: white;
+}
+textarea{
+    pointer-events: none;
+    cursor: not-allowed;
 }
