--- a/css/StoryCreate.css
+++ b/css/StoryCreate.css
@@ -5,7 +5,7 @@ body{
 }
 section {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 #create {
     display: flex;
@@ -52,4 +52,57 @@ section {
 
 #connectButton:hover {
     background-color: #40703c;
+}
+.categorie{
+    width: 500px;
+    height: 150px;
+    margin: 10px 0px;
+
+    background-color: violet;
+}
+.choice{
+    width: 100%;
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: white;
+
+    background-color: black;
+}
+.srcchoice{
+    width: 100%;
+    height: 60px;
+
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+
+    background-color: rgb(209, 198, 198);
+}
+.cube{
+    width: 32px;
+    height: 32px;
+
+    background-color: chartreuse;
+}
+.checkboxchoice{
+    width: 100%;
+    height: 40px;
+
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+
+    background-color: rgb(209, 198, 198);
+}
+input{
+    width: 25px;
+    height: 25px;
+
+    padding-top: 5px;
 }
