--- a/css/index.css
+++ b/css/index.css
@@ -103,3 +103,14 @@ a{
 
     background-color: rgb(209, 198, 198);
 }
+.categorie{
+    width: 100%;
+    height: 50px;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+
+    background-color: rgb(209, 198, 198);
+}
