--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 
 .histoire{
     width: 350px;
-    height: 350px;
+    height: 400px;
     margin: 25px;
     margin-bottom: 40px;
     background-color: rgb(255, 255, 255);
@@ -23,6 +23,17 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+.categorie{
+    width: 100%;
+    height: 50px;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+
+    background-color: rgb(209, 198, 198);
 }
 .caseDesc{
     background-color: rgb(209, 198, 198);
